--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,7 +1,39 @@
 # App Descriptor
 appTitle=Books
-appDescription=App with a list of books
+appDescription=Library management app
 
 # BookList View
 homePageTitle=Books
-successRequest=Cartea a fost inserata cu succes.
+sort = Sorting
+filter = Book Filter
+add=Add
+delete=Delete
+update=Update
+
+# Sorter text and input placeholders Dialogs
+ascending=Ascending
+descending=Descending
+Title = Title
+Author = Author
+Language = Language
+Date = Publishing Date
+DateStart = Published since
+DateEnd = Published until
+TotalNumber = Total Book Number
+AvailableNumber = Available Book Number
+save=Save
+cancel=Cancel
+
+#Toasts
+successCreateRequest=Book Succesfully created
+successUpdateRequest=Book Succesfully updated
+errorCreateRequest=Book error at creation
+errorUpdateRequest=Book error at update
+errorNoBookSelected=You need to select a book from the table to update
+
+#Service exception messages
+error_number_greater = The number of copies in the library must not be smaller than the number of available copies.
+error_isbn_not_found = The Book with the given ISBN has not been found in the database.
+error_update_error = The book could not be updated
+error_added_error = The Book could not be added in the database.
+error_delete_error = The book could not be deleted.
